--- a/src/content/posts/translations/alexandrian-index.mdx
+++ b/src/content/posts/translations/alexandrian-index.mdx
@@ -424,13 +424,13 @@ Cypher v. Fate
 
 ## Модуль статуса кампании
 
-Модуль статуса кампании: Корреспонденция
+[Модуль статуса кампании: Корреспонденция](https://cyborgsandmages.com/posts/translations/alexandrian-campaign-status-module-correspondence)
 
-Модуль статуса кампании: Обновление списков
+[Модуль статуса кампании: Обновление списков](https://cyborgsandmages.com/posts/translations/alexandrian-campaign-status-module-restocking-checklists)
 
-Модуль статуса кампании: Статус подземелья
+[Модуль статуса кампании: Статус подземелья](https://cyborgsandmages.com/posts/translations/alexandrian-campaign-status-module-dungeon-status)
 
-Модуль статуса кампании: Последствия событий
+[Модуль статуса кампании: Последствия событий](https://cyborgsandmages.com/posts/translations/alexandrian-campaign-status-module-event-fallout)
 
 ## Рулинги на практике
 
