--- a/src/content/posts/translations/alexandrian-5e-dynamic-responses-for-saving-throws.mdx
+++ b/src/content/posts/translations/alexandrian-5e-dynamic-responses-for-saving-throws.mdx
@@ -9,6 +9,7 @@ tags:
   - перевод
   - D&D 5e
   - спасброски
+  - Непроверенная пятая редакция
 author: Justin Alexander
 translator: Станислав "Drakzar" Иванов
 ---
