--- a/src/content/posts/translations/alexandrian-5e-improved-rest.mdx
+++ b/src/content/posts/translations/alexandrian-5e-improved-rest.mdx
@@ -9,6 +9,7 @@ tags:
   - D&D 5e
   - Короткий отдых
   - Длинный отдых
+  - Непроверенная пятая редакция
 author: Justin Alexander
 translator: Станислав "Drakzar" Иванов
 ---
