--- a/src/content/posts/translations/alexandrian-5e-situational-advantage.mdx
+++ b/src/content/posts/translations/alexandrian-5e-situational-advantage.mdx
@@ -8,6 +8,7 @@ tags:
   - Советы Мастеру
   - D&D 5e
   - Преимущество
+  - Непроверенная пятая редакция
 author: Justin Alexander
 translator: Станислав "Drakzar" Иванов
 ---
