--- a/src/content/posts/translations/alexandrian-index.mdx
+++ b/src/content/posts/translations/alexandrian-index.mdx
@@ -410,6 +410,8 @@ Cypher v. Fate
 
 [Размышления о путешествиях по диким землям - Часть 2](https://cyborgsandmages.com/posts/translations/alexandrian-thinking-wilderness-travel-2)
 
+[Размышления о путешествиях по диким землям - Часть 2](https://cyborgsandmages.com/posts/translations/alexandrian-thinking-wilderness-travel-2)
+
 Как же плох Guidance в пятой редакции
 
 [Долина сапфировых волн – обновление 2023 года](https://cyborgsandmages.com/posts/translations/alexandrian-valley-of-the-sapphire-waves-2023-update)
@@ -444,7 +446,7 @@ Cypher v. Fate
 
 [Рулинги на практике: Ловушки, часть 2](https://cyborgsandmages.com/posts/translations/alexandrian-rulings-practice-traps-2)
 
-Рулинги на практике: Проверки рассудка
+[Рулинги на практике: Проверки рассудка](https://cyborgsandmages.com/posts/translations/alexandrian-rulings-practice-sanity)
 
 ## Непроверенная пятая редакция
 
