--- a/src/content/singles/downloads.mdx
+++ b/src/content/singles/downloads.mdx
@@ -58,10 +58,10 @@ hexcrawl-rules-5e-alexandrian
 
 ## ДРУГИЕ СИСТЕМЫ
 
-<file file="godbound_free_ru_20191116.pdf" title="Godbound (бесплатная версия), перевод на русский" />
+<File file="godbound_free_ru_20191116.pdf" title="Godbound (бесплатная версия), перевод на русский"/>
 
-<file file="stars_without_number_rus_rus.pdf" title="Бесчисленные звезды" />
+<File file="stars_without_number_rus_rus.pdf" title="Бесчисленные звезды"/>
 
-<file file="worlds-without-number-player-book.docx" title="Бесчисленные миры, книга игрока" />
+<File file="worlds-without-number-player-book.docx" title="Бесчисленные миры, книга игрока"/>
 
-<file file="sbornik-osnovnyh-pravil-versiya-0.82-rolevaya-igra-r-pathfinder.docx" title="Сборник основных правил (PF 1 like), v.0.82" />
+<File file="sbornik-osnovnyh-pravil-versiya-0.82-rolevaya-igra-r-pathfinder.docx" title="Сборник основных правил (PF 1 like), v.0.82"/>
