--- a/src/content/posts/translations/alexandrian-campaign-status-module-dungeon-status.mdx
+++ b/src/content/posts/translations/alexandrian-campaign-status-module-dungeon-status.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Модуль статуса кампании: Статус подземелья"
 date: 2023-10-15 09:00
-description: "Статья Джастина Александера из цикла про Модуль статуса кампании посвященная статусу (состоянию) подземелья #alexandrian #translate #dnd5e #campaign #gmtips"
+description: "ПЕРЕВОД - Статья Джастина Александера из цикла про Модуль статуса кампании посвященная статусу (состоянию) подземелья #alexandrian #translate #dnd5e #campaign #gmtips"
 tags:
   - Alexandrian
   - Советы Мастеру
