--- a/src/content/posts/translations/alexandrian-campaign-status-module-event-fallout.mdx
+++ b/src/content/posts/translations/alexandrian-campaign-status-module-event-fallout.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Модуль статуса кампании: Последствия событий"
 date: 2023-10-15 15:00
-description: "Статья Джастина Александера из цикла про Модуль статуса кампании посвященная отслеживанию и нотации последствий событий #alexandrian #translate #dnd5e #campaign #gmtips"
+description: "ПЕРЕВОД - Статья Джастина Александера из цикла про Модуль статуса кампании посвященная отслеживанию и нотации последствий событий #alexandrian #translate #dnd5e #campaign #gmtips"
 tags:
   - Alexandrian
   - Советы Мастеру
