--- a/src/content/posts/translations/alexandrian-game-structure-sector-crawl.mdx
+++ b/src/content/posts/translations/alexandrian-game-structure-sector-crawl.mdx
@@ -1,6 +1,6 @@
 ---
 title: '#Теория — Игровая структура: Исследование секторов'
-description: 'Перевод цикла статей Александриана про игровые структуры #alexandrian #translate #rpg'
+description: 'ПЕРЕВОД - Перевод цикла статей Александриана про игровые структуры #alexandrian #translate #rpg'
 date: 2023-10-15 21:00
 tags:
   - Alexandrian
