--- a/src/content/posts/translations/alexandrian-random-gm-advice-not-expected-plot-hooks.mdx
+++ b/src/content/posts/translations/alexandrian-random-gm-advice-not-expected-plot-hooks.mdx
@@ -1,6 +1,6 @@
 ---
 title: Случайный совет для Мастера – Неожиданные сюжетные завязки
-description: Перевод статьи Александриана - Случайный совет для Мастера – Неожиданные сюжетные завязки
+description: ПЕРЕВОД - Перевод статьи Александриана - Случайный совет для Мастера – Неожиданные сюжетные завязки
 date: 2023-09-18
 tags:
   - 'Alexandrian'
