--- a/src/content/posts/translations/alexandrian-thinking-wilderness-travel-2.mdx
+++ b/src/content/posts/translations/alexandrian-thinking-wilderness-travel-2.mdx
@@ -1,7 +1,7 @@
 ---
 title: Размышления о путешествиях по диким землям - Часть 2
 date: 2023-09-17 22:00
-description: Размышления Александриана о месте путешествий по дикой местности в НРИ #alexandrian #wilderness #travel #translate
+description: ПЕРЕВОД - Размышления Александриана о месте путешествий по дикой местности в НРИ #alexandrian #wilderness #travel #translate
 tags:
   - 'Alexandrian'
   - 'Советы Мастеру'
