--- a/src/content/posts/translations/angrygm-five-simple-rules-for-games-with-skill-system.mdx
+++ b/src/content/posts/translations/angrygm-five-simple-rules-for-games-with-skill-system.mdx
@@ -1,6 +1,6 @@
 ---
 title: Злой ГМ - 5 простых правил для игр с системой навыков
-description: Перевод-конспект статьи Злого-ГМа про особенности вождения систем с навыками
+description: ПЕРЕВОД - Перевод-конспект статьи Злого-ГМа про особенности вождения систем с навыками
 date: 2023-09-18 06:00
 tags:
   - Angry GM
