--- a/src/content/posts/translations/angrygm-four-things-make-encounters-not-suck.mdx
+++ b/src/content/posts/translations/angrygm-four-things-make-encounters-not-suck.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Злой ГМ - Четыре вещи о которых вы не слышали, которые делают энкаунтеры не отстойными'
 date: '2023-09-05'
-description: 'Перевод статьи Злого ГМ-а про создание столкновений'
+description: 'ПЕРЕВОД - Перевод статьи Злого ГМ-а про создание столкновений'
 tags:
   - Angry GM
   - перевод
