--- a/src/content/posts/translations/inkwell-hexplorations-village.mdx
+++ b/src/content/posts/translations/inkwell-hexplorations-village.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Гексоследование: обычная деревня'
 date: '2023-09-13 20:00'
-description: 'Создание обычной деревни в процессе гекскравла становится совсем легким с использованием таблиц из серии Гексоследований от Inkwell Ideas'
+description: 'ПЕРЕВОД - Создание обычной деревни в процессе гекскравла становится совсем легким с использованием таблиц из серии Гексоследований от Inkwell Ideas'
 tags:
   - 'hexcrawl'
   - 'inkwell ideas'
@@ -10,6 +10,7 @@ tags:
   - 'гексы'
   - 'Советы Мастеру'
   - 'Руководство Мастера'
+  - HEXPLORATIONS
 ---
 
 В этом выпуске **Гексоследования** (список деталей сущностей, которые можно встретить во время исследования гексов или создания своего мира)  описана самая обычная деревня.
