--- a/src/content/posts/translations/alexandrian-campaign-status-module-correspondence.mdx
+++ b/src/content/posts/translations/alexandrian-campaign-status-module-correspondence.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Модуль статуса кампании: Корреспонденция"
 date: 2023-10-15 06:00
-description: "Статья Джастина Александера из цикла про Модуль статуса кампании посвященная переписке между персонажами #alexandrian #translate #dnd5e #campaign #gmtips"
+description: "ПЕРЕВОД - Статья Джастина Александера из цикла про Модуль статуса кампании посвященная переписке между персонажами #alexandrian #translate #dnd5e #campaign #gmtips"
 tags:
   - Alexandrian
   - Советы Мастеру
