--- a/src/content/posts/translations/alexandrian-campaign-status-module-restocking-checklists.mdx
+++ b/src/content/posts/translations/alexandrian-campaign-status-module-restocking-checklists.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Модуль статуса кампании: Статус подземелья"
 date: 2023-10-15 18:00
-description: "Статья Джастина Александера из цикла про Модуль статуса кампании посвященная перезаполнению и обновлению локаций (подземелий) #alexandrian #translate #dnd5e #campaign #gmtips"
+description: "ПЕРЕВОД - Статья Джастина Александера из цикла про Модуль статуса кампании посвященная перезаполнению и обновлению локаций (подземелий) #alexandrian #translate #dnd5e #campaign #gmtips"
 tags:
   - Alexandrian
   - Советы Мастеру
