--- a/src/content/posts/translations/alexandrian-the-many-types-of-balance.mdx
+++ b/src/content/posts/translations/alexandrian-the-many-types-of-balance.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Многообразие видов баланса '
 date: '2023-10-06 10:00'
-description: 'Джастин Александер в этой старой заметке описывает виды баланса, которые встречаются в НРИ'
+description: 'ПЕРЕВОД - Джастин Александер в этой старой заметке описывает виды баланса, которые встречаются в НРИ'
 tags:
   - 'Alexandrian'
   - 'перевод'
