--- a/src/content/posts/translations/angrygm-downtime-activities.mdx
+++ b/src/content/posts/translations/angrygm-downtime-activities.mdx
@@ -1,6 +1,6 @@
 ---
 title: Система деятельности простоя Злого ГМ-а
-description: Перевод статьи Злого ГМ-а про используемую им систему деятельности простоя между приключениями в D&D 5e
+description: ПЕРЕВОД - Перевод статьи Злого ГМ-а про используемую им систему деятельности простоя между приключениями в D&D 5e
 date: 2023-08-17
 tags:
   - Angry GM
