--- a/src/content/posts/cored20rpg/bestiary-1.mdx
+++ b/src/content/posts/cored20rpg/bestiary-1.mdx
@@ -33,4 +33,10 @@ author: Антон "Palant" Палихов
 
 ЧЕРТЫ
 
+---
+
+[БЕСТИАРИЙ](https://cyborgsandmages.com/posts/core-d20/bestiary)
+
+[ПРО КОМАНДИРОВ И СОЛДАТ](https://cyborgsandmages.com/posts/core-d20/about-commanders-and-units)
+
 
