--- a/src/content/posts/translations/alexandrian-index.mdx
+++ b/src/content/posts/translations/alexandrian-index.mdx
@@ -424,6 +424,8 @@ Cypher v. Fate
 
 [Многообразие видов баланса](https://cyborgsandmages.com/posts/translations/alexandrian-the-many-types-of-balance)
 
+[Непроверено - порог внезапного урона](https://cyborgsandmages.com/posts/translations/alexandrian-untested-surprise-damage-threshold)
+
 ## Модуль статуса кампании
 
 [Модуль статуса кампании: Корреспонденция](https://cyborgsandmages.com/posts/translations/alexandrian-campaign-status-module-correspondence)
