--- a/src/content/posts/core-d20/bestiary-drow-warrior.mdx
+++ b/src/content/posts/core-d20/bestiary-drow-warrior.mdx
@@ -12,6 +12,8 @@ tags:
   - Core d20 RPG
 ---
 
+В базовых правилах пятой редакции D&D для стандартных воинов дроу предлагается использовать либо измененный статблок стражника либо уже использовать элитного воина дроу. Этот статблок закрывает нишу обычного воина дроу.
+ 
 ___
 >## ВОИН ДРОУ
 >*Средний гуманоид (дроу), обычно нейтрально-злой*
