--- a/src/content/posts/core-d20/changed-rest-mechanics.mdx
+++ b/src/content/posts/core-d20/changed-rest-mechanics.mdx
@@ -13,7 +13,16 @@ tags:
   - Medium rest
   - Core d20 RPG
 ---
-
+---
+title: example
+description: example
+date: 2023-05-17
+tags:
+  -example
+author: example
+translator: example
+cover: example
+---
 ## ОТДЫХ И ВОССТАНОВЛЕНИЕ ЗДОРОВЬЯ
 
 Восстановление хитов персонажа происходит и без использования Костей Хитов или медицинской помощи, но, к сожалению, достаточно медленно.
