--- a/src/content/singles/home.mdx
+++ b/src/content/singles/home.mdx
@@ -18,6 +18,14 @@ links:
 
 На этом сайте мы выкладываем как свои материалы, так и переводные и прочие статьи других авторов, преследуя цель обеспечить читателям доступ ко всей необходимой информации в одном месте.
 
+
+<Aside v="gold">
+
+на d20 выпало { Math.floor(Math.random() \* 20) }
+
+</Aside>
+
+
 ## Наша команда
 
 - Антон "Palant" Палихов - ГМ, аналитик, немного переводчик и собиратель знанинй по сеттингам. Пишет homebrew материалы для пятой редакции и всегда готов помочь другим мастерам и игрокам советом. Любит повторять фразу "Для самоорганизации сообщества ему необходим самоорганизатор".
