--- a/src/content/singles/downloads.mdx
+++ b/src/content/singles/downloads.mdx
@@ -44,13 +44,15 @@ hexcrawl-rules-5e-alexandrian
 
 [Праймер кампании Лиги Авантюристов Врата Балдура: Нисхождение в Авернус](https://cyborgsandmages.com/files/downloads/bgdia_primer_0.9.pdf)
 
-[Старый черновик правил изготовления предметов](https://cyborgsandmages.com/files/downloads/palant-guide-item-crafting-chapter-2-additional-rules-v041-07122019.pdf)
 
-[Старый черновик измененных правил сражения](https://cyborgsandmages.com/files/downloads/06_combat_rules_variant.docx)
 
-[Старый черновик измененных правил сражения версия 0.8, в формате docx](https://cyborgsandmages.com/files/downloads/06_combat_rules_variant_v.0.8_alpha.docx)
+<file file="palant-guide-item-crafting-chapter-2-additional-rules-v041-07122019.pdf" title="Старый черновик правил изготовления предметов"/>
 
-[Старый черновик измененных правил сражения версия 0.8, в формате pdf](https://cyborgsandmages.com/files/downloads/06_combat_rules_variant_v.0.8_alpha.pdf)
+<file file="06_combat_rules_variant.docx" title="Старый черновик измененных правил сражения, в формате docx"/>
+
+<file file="06_combat_rules_variant_v.0.8_alpha.docx" title="Старый черновик измененных правил сражения версия 0.8, в формате docx"/>
+
+<file file="06_combat_rules_variant_v.0.8_alpha.pdf" title="Старый черновик измененных правил сражения версия 0.8, в формате pdf"/>
 
 <file file="aethan-guide-to-seafaring-draft.pdf" title="Руководство Эйтана по мореплаванию, черновик"/>
 
@@ -62,10 +64,19 @@ hexcrawl-rules-5e-alexandrian
 
 ## ДРУГИЕ СИСТЕМЫ
 
+
+### GODBOUND
+
 <File file="godbound_free_ru_20191116.pdf" title="Godbound (бесплатная версия), перевод на русский"/>
+
+### STARS WITHOUT NUMBER
 
 <File file="stars_without_number_rus_rus.pdf" title="Бесчисленные звезды"/>
 
+### WORLDS WITHOUT NUMBER
+
 <File file="worlds-without-number-player-book.docx" title="Бесчисленные миры, книга игрока"/>
+
+### PF + D&D 3.5 SRD
 
 <File file="sbornik-osnovnyh-pravil-versiya-0.82-rolevaya-igra-r-pathfinder.docx" title="Сборник основных правил (PF 1 like), v.0.82"/>
