--- a/src/content/posts/translations/alexandrian-index.mdx
+++ b/src/content/posts/translations/alexandrian-index.mdx
@@ -187,9 +187,9 @@ tags:
 
 ## Цикл Случайный совет для Мастера
 
-Случайный совет для Мастера: Создание улик
+[Случайный совет для Мастера: Создание улик (Часть 1)](https://cyborgsandmages.com/posts/translations/alexandrian-random-gm-tip-clue-creating-1))
 
-Случайный совет для Мастера: Создание улик (Часть 2)
+[Случайный совет для Мастера: Создание улик (Часть 2)](https://cyborgsandmages.com/posts/translations/alexandrian-random-gm-tip-clue-creating-2)
 
 [Случайный совет для Мастера: Зачем вообще нужны столкновения в дикой местности?](https://cyborgsandmages.com/posts/translations/alexandrian-random-gm-tip-why-wilderness-encounters-is-needed)
 
