--- a/src/content/posts/translations/alexandrian-random-gm-tip-clue-creating-1.mdx
+++ b/src/content/posts/translations/alexandrian-random-gm-tip-clue-creating-1.mdx
@@ -16,15 +16,15 @@ cover: ~assets/covers/clue-creating-1.jpg
 
 ![img](/images/clue-creating-1.jpg)
 
-Текст [Justin Alexander](https://vk.com/away.php?to=https://thealexandrian.net/about&cc_key=) от 30 мая 2021 года
+Текст Justin Alexander от 30 мая 2021 года
 
-В «[Правиле Трех Улик](https://vk.com/away.php?to=https%3A%2F%2Fthealexandrian.net%2Fwordpress%2F1118%2Froleplaying-games%2Fthree-clue-rule&cc_key=)» я утверждаю, что для достижения вывода, который вы хотите от персонажей в детективном сценарии, вы должны включить как минимум три улики. Многие с успехом создавали и водили игры на основе этого совета, но для ДМов, начинающих работать с этой техникой, она зачастую вызывает вопрос:
+В Правиле Трех Улик я утверждаю, что для достижения вывода, который вы хотите от персонажей в детективном сценарии, вы должны включить как минимум три улики. Многие с успехом создавали и водили игры на основе этого совета, но для ДМов, начинающих работать с этой техникой, она зачастую вызывает вопрос:
 
 Как мне вообще создать все эти улики?
 
 Так что давайте немного поговорим о том, как создавать улики и о некоторых вещах, которым я научился за все эти годы и которые могут оказаться вам полезны.
 
-Во-первых, прочтите «[Случайный совет для Мастера – использование списков откровений](https://vk.com/away.php?to=https%3A%2F%2Fthealexandrian.net%2Fwordpress%2F40978%2Froleplaying-games%2Frandom-gm-tip-using-revelation-lists&cc_key=)». Эта статья подробно рассматривает то, как я организую свои списки улик во время создания и вождения сценариев, и эта структура может быть вам полезна, когда вы лишь начинаете включать улики в свой сценарий.
+Во-первых, прочтите Случайный совет для Мастера – использование списков откровений. Эта статья подробно рассматривает то, как я организую свои списки улик во время создания и вождения сценариев, и эта структура может быть вам полезна, когда вы лишь начинаете включать улики в свой сценарий.
 
 Во-вторых, не думайте слишком много. Многие улики появятся естественным образом по мере создания сценария. Я рекомендую провести начальный «структурный прогон», в ходе которого вам нужно определить необходимые открытия и назначить к ним улики. Если вы сможете подобрать по три штуки к каждому откровению на этом моменте, это просто прекрасно. Но если у вас проблемы с заполнением всех пустых мест в своем списке, это тоже нормально: начните прорабатывать детали сценария, держа список открытий неподалеку, и вы зачастую с легкостью найдете улики по пути («О! Сильвестр точно должен знать, что Дядюшка Боб был морпехом!» или «Эй! Я мог бы положить спичечный коробок из «Серебряного Родео» в сумочку Сьюзан!»). И даже после этого вы не соберете все необходимые улики, детально знание сценария облегчит вам поиск улик во время второй сессии мозгового штурма.
 
@@ -54,15 +54,15 @@ cover: ~assets/covers/clue-creating-1.jpg
 
 Так как реагирующие улики более или менее полностью зависят от спонтанного решения игроков пойти поискать их, они могут быть очень ненадежными во время дизайна приключения. С другой стороны, если поиск конкретного вида реагирующей улики стал стандартной оперативной процедурой для конкретной группы, то может быть с точностью до наоборот!
 
-Например, за последние несколько лет я потратил немало времени на вождение одних и тех же сценариев по [_Call of Cthulhu_](https://vk.com/away.php?to=https%3A%2F%2Fthealexandrian.net%2Fwordpress%2F39221%2Froleplaying-games%2Fcall-of-cthulhu-5th-edition-revised-system-cheat-sheet&cc_key=) и [_Trail of Cthulhu_](https://vk.com/away.php?to=https%3A%2F%2Fthealexandrian.net%2Fwordpress%2F35587%2Froleplaying-games%2Ftrail-of-cthulhu-cheat-sheet&cc_key=) для различных групп. Группы с игроками, что прочли книги правил и имели много игрового опыта почти автоматически шли в библиотеку или [изучали местные газетные архивы](https://vk.com/away.php?to=https%3A%2F%2Fthealexandrian.net%2Fwordpress%2F39722%2Froleplaying-games%2Feternal-lies-addendum-local-newspapers&cc_key=) для отсылок на то, что они изучаю, так как книги правил задали это как стандартную процедуру для сыщиков. Группы без этого опыта…просто этого не делали.
+Например, за последние несколько лет я потратил немало времени на вождение одних и тех же сценариев по Call of Cthulhu и Trail of Cthulhu для различных групп. Группы с игроками, что прочли книги правил и имели много игрового опыта почти автоматически шли в библиотеку или изучали местные газетные архивыдля отсылок на то, что они изучаю, так как книги правил задали это как стандартную процедуру для сыщиков. Группы без этого опыта…просто этого не делали.
 
-Ролевая игра [_Technoir_](https://vk.com/away.php?to=http%3A%2F%2Fwww.technoirrpg.com%2F&cc_key=) на деле механически создана вокруг стандартного действия «связаться с одним из ваших контактов». Если персонажи не знают, что им делать дальше, им нужно спросить один из своих контактов (а игра создана так, что у контактов всегда есть улика, или работа, или какая-то зацепка, которой можно последовать). Первые несколько раз, когда я водил, это работало без сучка и без задоринки. Затем я провел игру для группы, которые не прочитали книгу правил и не знали, что им делать, поэтому игра превратилась в монотонный и однообразный процесс, пока я не осознал, что мне нужно было сказать новичкам: если вы застряли, сделайте по-нуарном, свяжитесь с контактом!
+Ролевая игра Technoir на деле механически создана вокруг стандартного действия «связаться с одним из ваших контактов». Если персонажи не знают, что им делать дальше, им нужно спросить один из своих контактов (а игра создана так, что у контактов всегда есть улика, или работа, или какая-то зацепка, которой можно последовать). Первые несколько раз, когда я водил, это работало без сучка и без задоринки. Затем я провел игру для группы, которые не прочитали книгу правил и не знали, что им делать, поэтому игра превратилась в монотонный и однообразный процесс, пока я не осознал, что мне нужно было сказать новичкам: если вы застряли, сделайте по-нуарном, свяжитесь с контактом!
 
 В других случаях вы обнаружите, что группы спонтанно разрабатывают свои стандартные оперативные процедуры.
 
 **Динамичные улики** – это те, которые персонажи находят во время расследования, которое логически должно было предоставить им информацию несмотря на то, что вы намеренно не готовили для него улики. Это то, что «_Правило Трех Улик_» называет дозволительным поиском улик. Например, персонажи решили осмотреться вокруг дома. Вы не предполагали, что они это сделают, но вы знаете, что убийца убежал в лесной массив в дальнем конце участка, так что вы решаете, что персонажи потенциально могут найти отпечатки ног убийцы.
 
-Однако не все динамические улики – результат вашего ошеломительного открытия во время сессии. В некоторых случаях они могут быть привнесены в структуру сложного сценария, где вы можете быть точно уверены, что персонажи предпримут конкретные действия, но не уверены, в какой форме они будут сделаны. Для примеров подобного сверьтесь с [_Dragon Heist Remix_](https://vk.com/away.php?to=https%3A%2F%2Fthealexandrian.net%2Fwordpress%2F42810%2Froleplaying-games%2Fdragon-heist-remix-part-5e-outpost-and-lair-revelation-lists&cc_key=), где среди прочего персонажи могут решить изучить одну из фракций:
+Однако не все динамические улики – результат вашего ошеломительного открытия во время сессии. В некоторых случаях они могут быть привнесены в структуру сложного сценария, где вы можете быть точно уверены, что персонажи предпримут конкретные действия, но не уверены, в какой форме они будут сделаны. Для примеров подобного сверьтесь с Dragon Heist Remix, где среди прочего персонажи могут решить изучить одну из фракций:
 
 Если персонажи хотят найти фракцию, проведя общее расследование, укажите им направление к одному из ее аванпостов (каждый аванпост будет содержать улики, ведущие к Логову, что обычно является конечной целью партии).
 
@@ -119,6 +119,9 @@ cover: ~assets/covers/clue-creating-1.jpg
 Очевидно, что не каждый навык может относиться к каждому кусочку информации. Но если у вас есть что-то конкретно в голове, пройдясь по списку навыков, вы наверняка найдете в нем вдохновение.
 
 ---
+
 Также вам может быть интересно посмотреть на полный [Перечень переводов Александриана на сайте Киборгов и Чародеев](https://cyborgsandmages.com/posts/translations/alexandrian-index)
+
 Вы найдете там немало полезной информации.
+
 Также стоит обратить внимание на [Перечень переводов Злого ГМ-а](https://cyborgsandmages.com/posts/translations/angrygm-index)
