--- a/src/content/posts/translations/alexandrian-random-gm-tip-clue-creating-2.mdx
+++ b/src/content/posts/translations/alexandrian-random-gm-tip-clue-creating-2.mdx
@@ -15,7 +15,7 @@ cover: ~assets/covers/clue-creating-2.jpg
 ---
 
 ![img](/images/clue-creating-2.jpg)
-Текст [Justin Alexander](https://vk.com/away.php?to=https://thealexandrian.net/about&cc_key=) от 30 мая 2021 года
+Текст Justin Alexander от 30 мая 2021 года
 
 **_Заблуждение об идеальном преступлении_**
 
@@ -81,10 +81,10 @@ cover: ~assets/covers/clue-creating-2.jpg
 
 Однако это не значит, что вы не можете создавать детективные истории именно так! Как только вы поймете, что это три отдельных заключения, вы попросту можете следовать Правилу Трех Улик: пусть три улики указывают на зеленый свитер, еще три – на высоту убийцы, ну и последние три – на серые волосы.
 
-Эта техника может добавить удовлетворительную глубину вашим детективным сценариям, предоставив игрокам четкое понимание, что их расследование строится к некоему центральному откровению. Это может быть особенно эффективно для Большой Правды в кампаниях по типу «_Секретных материалов_» или при определении места, где должен пройти финал кампании. Вы можете найти пример этого в моем [_Eternal Lies Remix_](https://vk.com/away.php?to=https%3A%2F%2Fthealexandrian.net%2Fwordpress%2F37078%2Froleplaying-games%2Feternal-lies-the-alexandrian-remix&cc_key=).
-
+Эта техника может добавить удовлетворительную глубину вашим детективным сценариям, предоставив игрокам четкое понимание, что их расследование строится к некоему центральному откровению. Это может быть особенно эффективно для Большой Правды в кампаниях по типу «_Секретных материалов_» или при определении места, где должен пройти финал кампании. Вы можете найти пример этого в моем Eternal Lies Remix.
 
 <Aside>
+
 Для того чтобы поддержать проект - [подпишитесь на Патреон](https://www.patreon.com/palikhov)
 
 Другие способы поддержать нас - на странице [Поддержать сайт](https://cyborgsandmages.com/support-us)
@@ -150,7 +150,11 @@ cover: ~assets/covers/clue-creating-2.jpg
 · Книги (включая посвящения и заметки на полях)
 
 · Бюрократические реестры/история проверок
+
 ---
+
 Также вам может быть интересно посмотреть на полный [Перечень переводов Александриана на сайте Киборгов и Чародеев](https://cyborgsandmages.com/posts/translations/alexandrian-index)
+
 Вы найдете там немало полезной информации.
+
 Также стоит обратить внимание на [Перечень переводов Злого ГМ-а](https://cyborgsandmages.com/posts/translations/angrygm-index)
