--- a/src/content/posts/translations/alexandrian-random-gm-tip-clue-creating-2.mdx
+++ b/src/content/posts/translations/alexandrian-random-gm-tip-clue-creating-2.mdx
@@ -1,6 +1,6 @@
 ---
 title: Случайный совет для Мастера – создание улик, часть 2
-description: `ПЕРЕВОД 2-ой статьи Джастина Александера с советом мастерам, как лучше создавать улики для своих сценариев #translate #alexandrian #clue` 
+description: "ПЕРЕВОД 2-ой статьи Джастина Александера с советом мастерам, как лучше создавать улики для своих сценариев #translate #alexandrian #clue"
 date: 2023-10-15 T 15:28:30Z
 tags:
   - улика
@@ -14,7 +14,7 @@ translator: Станислав "Drakzar" Иванов
 cover: ~assets/covers/clue-creating-2.jpg
 ---
 
-![img](/images/clue-creating-2.jpg)
+
 Текст Justin Alexander от 30 мая 2021 года
 
 **_Заблуждение об идеальном преступлении_**
@@ -82,14 +82,6 @@ cover: ~assets/covers/clue-creating-2.jpg
 Однако это не значит, что вы не можете создавать детективные истории именно так! Как только вы поймете, что это три отдельных заключения, вы попросту можете следовать Правилу Трех Улик: пусть три улики указывают на зеленый свитер, еще три – на высоту убийцы, ну и последние три – на серые волосы.
 
 Эта техника может добавить удовлетворительную глубину вашим детективным сценариям, предоставив игрокам четкое понимание, что их расследование строится к некоему центральному откровению. Это может быть особенно эффективно для Большой Правды в кампаниях по типу «_Секретных материалов_» или при определении места, где должен пройти финал кампании. Вы можете найти пример этого в моем Eternal Lies Remix.
-
-<Aside>
-
-Для того чтобы поддержать проект - [подпишитесь на Патреон](https://www.patreon.com/palikhov)
-
-Другие способы поддержать нас - на странице [Поддержать сайт](https://cyborgsandmages.com/support-us)
-
-</Aside>
 
 **_Формы улик_**
 
