--- a/src/content/posts/translations/alexandrian-random-gm-tip-clue-creating-1.mdx
+++ b/src/content/posts/translations/alexandrian-random-gm-tip-clue-creating-1.mdx
@@ -1,6 +1,6 @@
 ---
 title: Случайный совет для Мастера – создание улик, часть 1
-description: `ПЕРЕВОД 1-ой статьи Джастина Александера с советом мастерам, как лучше создавать улики для своих сценариев #translate #alexandrian #clue` 
+description: "ПЕРЕВОД 1-ой статьи Джастина Александера с советом мастерам, как лучше создавать улики для своих сценариев #translate #alexandrian #clue"
 date: 2023-10-15 T 15:28:30Z
 tags:
   - улика
@@ -14,7 +14,6 @@ translator: Станислав "Drakzar" Иванов
 cover: ~assets/covers/clue-creating-1.jpg
 ---
 
-![img](/images/clue-creating-1.jpg)
 
 Текст Justin Alexander от 30 мая 2021 года
 
