--- a/src/content/posts/translations/alexandrian-random-gm-tip-clue-creating-2.mdx
+++ b/src/content/posts/translations/alexandrian-random-gm-tip-clue-creating-2.mdx
@@ -14,6 +14,7 @@ translator: Станислав "Drakzar" Иванов
 cover: ~assets/covers/clue-creating-2.jpg
 ---
 
+![img](/images/clue-creating-2.jpg)
 
 Текст Justin Alexander от 30 мая 2021 года
 
