--- a/src/content/posts/core-d20/bestiary-drow-warrior.mdx
+++ b/src/content/posts/core-d20/bestiary-drow-warrior.mdx
@@ -10,8 +10,14 @@ tags:
   - Core d20 RPG
 ---
 
+В рамках написания заметки по тактике дроу мне пришлось немного поработать руками и сделать статблок воина дроу с Показателем опасности 2.
+
+[Дроу - кратко про тактику и столкновения ](https://cyborgsandmages.com/posts/articles/drow-tactics-lore-encounters)
+
+[Индекс статей про тактики существ](https://cyborgsandmages.com/posts/articles/bestiary-tactics-index)
+
 В базовых правилах пятой редакции D&D для стандартных воинов дроу предлагается использовать либо измененный статблок стражника либо уже использовать элитного воина дроу. Этот статблок закрывает нишу обычного воина дроу.
- 
+
 ___
 >## ВОИН ДРОУ
 >*Средний гуманоид (дроу), обычно нейтрально-злой*
@@ -59,3 +65,8 @@ ___
 >### РЕАКЦИИ
 >***Парирование.*** Дроу добавляет +2(1к4) к КЗ против одной атаки ближнего боя, которая должна попасть по нему. Для этого дроу должен видеть атакующего и использовать оружие ближнего боя.
 
+---
+
+[Дроу - кратко про тактику и столкновения ](https://cyborgsandmages.com/posts/articles/drow-tactics-lore-encounters)
+
+[Индекс статей про тактики существ](https://cyborgsandmages.com/posts/articles/bestiary-tactics-index)
