--- a/src/content/posts/articles/about-soldier-statblock.mdx
+++ b/src/content/posts/articles/about-soldier-statblock.mdx
@@ -192,6 +192,8 @@ tags:
 
 **Тактика построения.** Солдат получает преимущество на спасброски против очарования, испуга, захватов или обездвиживания пока он находится на расстоянии 5 футов от хотя бы одного союзника.
 
+>**Примечание.** Дополнительным плюсом этого статблока является то, что он в целом соответствует персонажу 2-го уровня
+
 ---
 
 [Про наемных солдат](https://cyborgsandmages.com/posts/articles/about-soldiers)
