--- a/src/content/posts/translations/alexandrian-game-structure-sector-crawl.mdx
+++ b/src/content/posts/translations/alexandrian-game-structure-sector-crawl.mdx
@@ -105,4 +105,11 @@ _Заметка: Я не говорю, что это единственно ве
 
 А _еще_ это даст удобную структуру для работы с повторным наполнением подземелья, то есть обратного зачистке процесса, когда туда мигрируют новые монстры. Ради подробностей по подобным вещам можете почитать [_(Re-)Running the Megadungeon_](https://vk.com/away.php?to=https%3A%2F%2Fthealexandrian.net%2Fwordpress%2F5%2Froleplaying-games%2Fre-running-the-megadungeon&cc_key=).
 
+---
+
+Также вам может быть интересно посмотреть на полный [Перечень переводов Александриана на сайте Киборгов и Чародеев](https://cyborgsandmages.com/posts/translations/alexandrian-index)
+
+Вы найдете там немало полезной информации.
+
+Также стоит обратить внимание на [Перечень переводов Злого ГМ-а](https://cyborgsandmages.com/posts/translations/angrygm-index)
 
