--- a/src/content/posts/articles/crosspost-citycrawl-1-map-and-street-generator.mdx
+++ b/src/content/posts/articles/crosspost-citycrawl-1-map-and-street-generator.mdx
@@ -21,9 +21,9 @@ tags:
 
 Поехали!
 
-## [](https://hackmd.io/QZ9UtdP1TXS76K-H5vfo6Q#%D0%A7%D0%B0%D1%81%D1%82%D1%8C-1-%D0%9A%D0%B0%D1%80%D1%82%D0%B0-%D0%B8-%D0%B3%D0%B5%D0%BD%D0%B5%D1%80%D0%B0%D1%82%D0%BE%D1%80-%D1%83%D0%BB%D0%B8%D1%86)Часть 1: Карта и генератор улиц.
+## Часть 1: Карта и генератор улиц.
 
-### [](https://hackmd.io/QZ9UtdP1TXS76K-H5vfo6Q#%D0%9F%D0%BE%D0%B4%D0%B3%D0%BE%D1%82%D0%BE%D0%B2%D0%BA%D0%B0-%D0%BA%D0%B0%D1%80%D1%82%D1%8B)Подготовка карты
+### Подготовка карты
 
 Любой crawl по определению не может существовать без карты. Vornheim предлагает способ создавать карту города, но я обнаружил, что не знаю, как им воспользоваться. Возникает слишком много вопросов: а как считать расстояние? А как объяснять игрокам планировку, чтобы они могли её зарисовать? Возможно, предложенные там практики хорошо сработают при предварительной подготовке карты, до игры, но меня это не интересовало. Вероятнее всего, стиль вождения Зака просто отличается от моего.
 
@@ -39,7 +39,7 @@ tags:
 
 Также не стоит разбивать карту на отдельные листы (например, по кварталам) — скорее всего, это будет очень неудобно.
 
-### [](https://hackmd.io/QZ9UtdP1TXS76K-H5vfo6Q#%D0%9D%D0%B0%D1%87%D0%B8%D0%BD%D0%B0%D0%B5%D0%BC-%D1%80%D0%B8%D1%81%D0%BE%D0%B2%D0%B0%D1%82%D1%8C-%D0%B3%D0%BE%D1%80%D0%BE%D0%B4)Начинаем рисовать город
+### Начинаем рисовать город
 
 Какую-то часть города стоит подготовить заранее. Не волнуйтесь, много времени это не займёт. Для начала прикинем, сколько в городе будет кварталов. Не стоит выбирать большое число; в конце концов, вам придётся все эти кварталы заполнять интересным контентом. Я бы советовал взять от пяти до десяти; зависит от того, насколько вы уверены в своей креативности. Выбираем для каждого квартала свой цвет и начинаем наносить этим цветом на карту основные улицы. Для простоты запоминания и ориентации Зак предлагает рисовать кварталы в форме их номеров, вот так:
 
@@ -73,9 +73,7 @@ tags:
 ![Citycrawl. Часть 1: Карта и генератор улиц, изображение №5](images/citycrawl-1-5.png)
 
 
-### [](https://hackmd.io/QZ9UtdP1TXS76K-H5vfo6Q#%D0%93%D0%B5%D0%BD%D0%B5%D1%80%D0%B0%D1%82%D0%BE%D1%80-%D1%83%D0%BB%D0%B8%D1%86)
-
-Генератор улиц
+### Генератор улиц
 
 Прекрасно. Общий план города у нас готов, но… этого ведь мало для игры. Практически нет зданий, есть только главные улицы, и рисовать всё остальное заранее, до игры — так муторно и скучно…
 
@@ -153,7 +151,7 @@ _3-э. дом: аптекарь, врач и таксидермист. К так
 
 И ещё. Этот момент мне кажется очевидным, но, возможно, его следует упомянуть отдельно. Генератор — это всего лишь способ генерировать контент. Это не правила игры, которым нужно железно следовать. Если у вас выпали странные результаты — не стесняйтесь их изменить. Иногда такое неизбежно. Наша цель — быть ведущим и рефери, а не китайской комнатой между игроками и набором таблиц.
 
-### [](https://hackmd.io/QZ9UtdP1TXS76K-H5vfo6Q#%D0%9B%D0%BE%D0%BA%D0%B0%D1%86%D0%B8%D0%B8-%D1%82%D0%BE%D1%87%D0%BA%D0%B8-%D0%B8%D0%BD%D1%82%D0%B5%D1%80%D0%B5%D1%81%D0%B0-%D0%BF%D0%BE%D0%B4%D0%B7%D0%B5%D0%BC%D0%B5%D0%BB%D1%8C%D1%8F-%D0%B8-%D0%BB%D0%BE%D0%B3%D0%BE%D0%B2%D0%B0)Локации, точки интереса, подземелья и логова
+### Локации, точки интереса, подземелья и логова
 
 Теперь следует нанести на карту те здания и локации, которые генератор нам не создаст. Это дворцы, храмы, арены, рынок, пристань — то, что существует в городе всего в одном или нескольких экземплярах.
 
