--- a/src/content/posts/articles/crosspost-citycrawl-1-map-and-street-generator.mdx
+++ b/src/content/posts/articles/crosspost-citycrawl-1-map-and-street-generator.mdx
@@ -50,16 +50,16 @@ tags:
 
 Итак, рисуем первый квартал:
 
-![Citycrawl. Часть 1: Карта и генератор улиц, изображение №2](images/citycrawl-1-2.png)
+![Citycrawl. Часть 1: Карта и генератор улиц, изображение №2](https://cyborgsandmages.com/images/citycrawl-1-2.png)
 
 
 К нему пририсуем второй, уже другим цветом (необязательно, но так удобнее ориентироваться):
 
-![Citycrawl. Часть 1: Карта и генератор улиц, изображение №3](images/citycrawl-1-3.png)
+![Citycrawl. Часть 1: Карта и генератор улиц, изображение №3](https://cyborgsandmages.com/images/citycrawl-1-3.png)
 
 И, просто для примера, третий:
 
-![Citycrawl. Часть 1: Карта и генератор улиц, изображение №4](images/citycrawl-1-4.png)
+![Citycrawl. Часть 1: Карта и генератор улиц, изображение №4](https://cyborgsandmages.com/images/citycrawl-1-4.png)
 
 
 Вот такое жизнерадостное послание у нас получилось. Разумеется, вы можете рисовать улицы с более правдоподобной планировкой; я использую слова в основном ради атмосферы, хотя у них есть ещё парочка интересных применений. Не забывайте, рисуем только основные магистрали города — закоулочки, тупички, скверики и улицы поменьше пока на карте отсутствуют.
@@ -70,7 +70,7 @@ tags:
 
 Должно получиться примерно вот так:
 
-![Citycrawl. Часть 1: Карта и генератор улиц, изображение №5](images/citycrawl-1-5.png)
+![Citycrawl. Часть 1: Карта и генератор улиц, изображение №5](https://cyborgsandmages.com/images/citycrawl-1-5.png)
 
 
 ### Генератор улиц
@@ -83,7 +83,7 @@ tags:
 
 Представьте, что гексы вокруг нашей цели пронумерованы по часовой стрелке. Что мы делаем? Бросаем два d6. Результат — направление, в котором идёт новая улица. Если в этот гекс уже идёт существующая улица, результат игнорируется. (Можно бросать 3d6, но в таком случае из одного гекса могут выходить слишком много улиц, и смысла в этом особого нет). Это будет выглядеть примерно так:
 
-![Citycrawl. Часть 1: Карта и генератор улиц, изображение №6](images/citycrawl-1-6.png)
+![Citycrawl. Часть 1: Карта и генератор улиц, изображение №6](https://cyborgsandmages.com/images/citycrawl-1-6.png)
 
 
 _Гекс G5. На кубиках выпало соответственно 2 и 5; результаты 3 или 6 мы бы проигнорировали._
@@ -98,17 +98,17 @@ _Гекс G5. На кубиках выпало соответственно 2 и
 
 Узнав количество, определяем тип обьектов по такой табличке:
 
-![Citycrawl. Часть 1: Карта и генератор улиц, изображение №7](images/citycrawl-1-7.png)
+![Citycrawl. Часть 1: Карта и генератор улиц, изображение №7](https://cyborgsandmages.com/images/citycrawl-1-7.png) 
 
 Допустим, у нас есть три объекта в гексе (результат 3 на d4). Я трижды бросаю d20: первый бросок — 11, 6-этажная башня; второй бросок — 17, сад, парк или сквер; третий бросок — 3, трёхэтажный дом. Наносим всё это на карту и получаем башню с разбитым рядом садом и дом:
 
-![Citycrawl. Часть 1: Карта и генератор улиц, изображение №8](images/citycrawl-1-8.png)
+![Citycrawl. Часть 1: Карта и генератор улиц, изображение №8](https://cyborgsandmages.com/images/citycrawl-1-8.png)
 
 **Шаг 3 — Особенности зданий.**
 
 Этот шаг опционален, но если вы хотите создать действительно правдоподобное и насыщенное деталями городское окружение, стоит использовать ещё и табличку наподобие этой для каждого из зданий.
 
-![Citycrawl. Часть 1: Карта и генератор улиц, изображение №9](images/citycrawl-1-9.png)
+![Citycrawl. Часть 1: Карта и генератор улиц, изображение №9](https://cyborgsandmages.com/images/citycrawl-1-9.png)
 
 Табличку вы, разумеется, можете сделать по своему вкусу; воздушные мосты появились из-за особенностей архитектуры Ворнхейма. Думаю, вы и сами догадались, что их тоже можно сгенерировать случайно — примерно по тому же механизму, что и улицы.
 
@@ -122,7 +122,7 @@ Cаду особенности, думаю, не нужны.
 
 Но это ещё не всё. У нас есть башня, у нас есть дом, а что в них находится? Вот тут нам на помощь и приходит табличка Buildings из Vornheim. Да, это таблица для D100 с различными зданиями и лавками, которые можно встретить в средневековом фэнтезийном городе. Результат в правой колонке даёт какую-то лавку или учреждение, в правой — зацепку для приключения в этой лавке.
 
-![Citycrawl. Часть 1: Карта и генератор улиц, изображение №10](images/citycrawl-1-10.png)
+![Citycrawl. Часть 1: Карта и генератор улиц, изображение №10](https://cyborgsandmages.com/images/citycrawl-1-10.png)
 
 Если вы составляете подобную таблицу самостоятельно, не забудьте о том, что среди результатов должны быть не только обыденные пекарни и мясные лавки, но и более любопытные заведения. Например, такой результат: гильдия воров, действующая под прикрытием законного бизнеса (бросьте ещё раз, чтобы определить прикрытие). Таблица должна быть весьма внушительной, чтобы обеспечить достаточную вариативность; если у вас не хватает фантазии, помимо самого «Ворнхейма» можно обратиться к [парижской налоговой переписи 1292 года](https://vk.com/away.php?to=http%3A%2F%2Fwww.batintheattic.com%2Fdownloads%2FTax%2520roll%2520Paris%25201292%2520Rev%25202.xls&cc_key=) или книге Gary Gygax’s World Builder, где есть множество ещё более подробных генераторов.
 
